# qt-programming-2024

./: CMakeLists.txt
assets/: assets.qrc
src/: MyGame.cpp  MyGame.h  main.cpp
src/DamageType/: DamageType.cpp  DamageType.h  FireDamage.cpp  FireDamage.h  IceDamage.cpp  IceDamage.h  LightningDamage.cpp  LightningDamage.h  OrdinaryDamage.cpp  OrdinaryDamage.h
src/Items/: Item.cpp  Item.h  MeleeWeapon.cpp  MeleeWeapon.h  Mountable.cpp  Mountable.h  Weapon.cpp  Weapon.h
src/Items/ArmorSuits/: ArmorSuit.cpp  ArmorSuit.h  ColdProofArmorSuit.cpp  ColdProofArmorSuit.h  FireProofArmorSuit.cpp  FireProofArmorSuit.h  LightningProofArmorSuit.cpp  LightningProofArmorSuit.h  OrdinarySuit.cpp  OrdinarySuit.h
src/Items/Armors/: Armor.cpp  Armor.h  ColdProofArmor.cpp  ColdProofArmor.h  FireProofArmor.cpp  FireProofArmor.h  LightningProofArmor.cpp  LightningProofArmor.h  OldShirt.cpp  OldShirt.h
src/Items/Arrows/: Arrow.cpp  Arrow.h  FireArrow.cpp  FireArrow.h  IceArrow.cpp  IceArrow.h  LightningArrow.cpp  LightningArrow.h  OrdinaryArrow.cpp  OrdinaryArrow.h
src/Items/Bows/: Bow.cpp  Bow.h  EpicMetalBow.cpp  EpicMetalBow.h  EpicWoodBow.cpp  EpicWoodBow.h  LegendaryMetalBow.cpp  LegendaryMetalBow.h  LegendaryWoodBow.cpp  LegendaryWoodBow.h  OrdinaryMetalBow.cpp  OrdinaryMetalBow.h  OrdinaryWoodBow.cpp  OrdinaryWoodBow.h
src/Items/Characters/: AIPlayer.cpp  AIPlayer.h  Character.cpp  Character.h  Link.cpp  Link.h
src/Items/Effects/: Effect.cpp  Effect.h  FireEffect.cpp  FireEffect.h  IceEffect.cpp  IceEffect.h  LightningEffect.cpp  LightningEffect.h
src/Items/HeadEquipments/: CapOfTheHero.cpp  CapOfTheHero.h  ColdProofHeadEquipment.cpp  ColdProofHeadEquipment.h  FireProofHeadEquipment.cpp  FireProofHeadEquipment.h  HeadEquipment.cpp  HeadEquipment.h  LightningProofHeadEquipment.cpp  LightningProofHeadEquipment.h
src/Items/LargeSwords/: FireLargeSword.cpp  FireLargeSword.h  IceLargeSword.cpp  IceLargeSword.h  LargeSword.cpp  LargeSword.h  LightningLargeSword.cpp  LightningLargeSword.h  MetalLargeSword.cpp  MetalLargeSword.h  WoodLargeSword.cpp  WoodLargeSword.h
src/Items/LegEquipments/: ColdProofLegEquipment.cpp  ColdProofLegEquipment.h  FireProofLegEquipment.cpp  FireProofLegEquipment.h  LegEquipment.cpp  LegEquipment.h  LightningProofLegEquipment.cpp  LightningProofLegEquipment.h  WellWornTrousers.cpp  WellWornTrousers.h
src/Items/Maps/: Battlefield.cpp  Battlefield.h  Map.cpp  Map.h
src/Items/Materials/: Material.cpp  Material.h  MetalMaterial.cpp  MetalMaterial.h  WoodMaterial.cpp  WoodMaterial.h
src/Items/Spears/: FireSpear.cpp  FireSpear.h  IceSpear.cpp  IceSpear.h  LightningSpear.cpp  LightningSpear.h  MetalSpear.cpp  MetalSpear.h  Spear.cpp  Spear.h  WoodSpear.cpp  WoodSpear.h
src/Items/Swords/: FireSword.cpp  FireSword.h  IceSword.cpp  IceSword.h  LightningSword.cpp  LightningSword.h  MetalSword.cpp  MetalSword.h  Sword.cpp  Sword.h  WoodSword.cpp  WoodSword.h
src/Scenes/: BattleScene.cpp  BattleScene.h  GameOverScene.cpp  GameOverScene.h  InformationArea.cpp  InformationArea.h  Scene.cpp  Scene.h  StartMenuScene.cpp  StartMenuScene.h
src/Scenes/InformationComponents/: ArmorSuitInformationBox.cpp  ArmorSuitInformationBox.h  ArrowInformationBox.cpp  ArrowInformationBox.h  DeBuffInformationBox.cpp  DeBuffInformationBox.h  WeaponInformationBox.cpp  WeaponInformationBox.h
