cmake_minimum_required(VERSION 3.28)
project(qt_programming_2024)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)


find_package(Qt6 COMPONENTS
        Core
        Gui
        Widgets
        REQUIRED)

add_executable(qt_programming_2024 src/main.cpp
        src/MyGame.cpp
        src/MyGame.h
        src/Items/Item.cpp
        src/Items/Item.h
        src/Items/Characters/Character.cpp
        src/Items/Characters/Character.h
        src/Items/Characters/Link.cpp
        src/Items/Characters/Link.h
        src/Items/Armors/Armor.cpp
        src/Items/Armors/Armor.h
        src/Items/HeadEquipments/HeadEquipment.cpp
        src/Items/HeadEquipments/HeadEquipment.h
        src/Items/LegEquipments/LegEquipment.cpp
        src/Items/LegEquipments/LegEquipment.h
        src/Items/HeadEquipments/CapOfTheHero.cpp
        src/Items/HeadEquipments/CapOfTheHero.h
        src/Items/Armors/OldShirt.cpp
        src/Items/Armors/OldShirt.h
        src/Items/LegEquipments/WellWornTrousers.cpp
        src/Items/LegEquipments/WellWornTrousers.h
        src/Scenes/Scene.cpp
        src/Scenes/Scene.h
        src/Scenes/BattleScene.cpp
        src/Scenes/BattleScene.h
        assets/assets.qrc
        src/Items/Maps/Map.cpp
        src/Items/Maps/Map.h
        src/Items/Maps/Battlefield.cpp
        src/Items/Maps/Battlefield.h
        src/Items/Mountable.cpp
        src/Items/Mountable.h
        src/Items/Armors/FireProofArmor.cpp
        src/Items/Armors/FireProofArmor.h
        src/Items/Platforms/Platform.cpp
        src/Items/Platforms/Platform.h
        src/Items/Platforms/WoodPlatform.cpp
        src/Items/Platforms/WoodPlatform.h
        src/Items/Platforms/StonePlatform.cpp
        src/Items/Platforms/StonePlatform.h
        src/Items/Platforms/BronzePlatform.cpp
        src/Items/Platforms/BronzePlatform.h
        src/Items/Platforms/SilverPlatform.cpp
        src/Items/Platforms/SilverPlatform.h
        src/Items/Platforms/GoldPlatform.cpp
        src/Items/Platforms/GoldPlatform.h
        src/Items/Weapon.cpp
        src/Items/Weapon.h
        src/Items/MeleeWeapon.cpp
        src/Items/MeleeWeapon.h
        src/Items/Bows/Bow.cpp
        src/Items/Bows/Bow.h
        src/Items/Swords/Sword.cpp
        src/Items/Swords/Sword.h
        src/Items/LargeSwords/LargeSword.cpp
        src/Items/LargeSwords/LargeSword.h
        src/Items/Spears/Spear.cpp
        src/Items/Spears/Spear.h
        src/Items/Swords/WoodSword.cpp
        src/Items/Swords/WoodSword.h
        src/Items/Swords/MetalSword.cpp
        src/Items/Swords/MetalSword.h
        src/Items/Swords/FireSword.cpp
        src/Items/Swords/FireSword.h
        src/Items/Swords/IceSword.cpp
        src/Items/Swords/IceSword.h
        src/Items/Swords/LightningSword.cpp
        src/Items/Swords/LightningSword.h
        src/Items/LargeSwords/WoodLargeSword.cpp
        src/Items/LargeSwords/WoodLargeSword.h
        src/Items/LargeSwords/MetalLargeSword.cpp
        src/Items/LargeSwords/MetalLargeSword.h
        src/Items/LargeSwords/FireLargeSword.cpp
        src/Items/LargeSwords/FireLargeSword.h
        src/Items/LargeSwords/IceLargeSword.cpp
        src/Items/LargeSwords/IceLargeSword.h
        src/Items/LargeSwords/LightningLargeSword.cpp
        src/Items/LargeSwords/LightningLargeSword.h
        src/Items/Spears/WoodSpear.cpp
        src/Items/Spears/WoodSpear.h
        src/Items/Spears/MetalSpear.cpp
        src/Items/Spears/MetalSpear.h
        src/Items/Spears/FireSpear.cpp
        src/Items/Spears/FireSpear.h
        src/Items/Spears/IceSpear.cpp
        src/Items/Spears/IceSpear.h
        src/Items/Spears/LightningSpear.cpp
        src/Items/Spears/LightningSpear.h
        src/Items/Bows/OrdinaryWoodBow.cpp
        src/Items/Bows/OrdinaryWoodBow.h
        src/Items/Bows/OrdinaryMetalBow.cpp
        src/Items/Bows/OrdinaryMetalBow.h
        src/Items/Bows/LegendaryWoodBow.cpp
        src/Items/Bows/LegendaryWoodBow.h
        src/Items/Bows/LegendaryMetalBow.cpp
        src/Items/Bows/LegendaryMetalBow.h
        src/Items/Bows/EpicWoodBow.cpp
        src/Items/Bows/EpicWoodBow.h
        src/Items/Bows/EpicMetalBow.cpp
        src/Items/Bows/EpicMetalBow.h
        src/Items/Armors/ColdProofArmor.cpp
        src/Items/Armors/ColdProofArmor.h
        src/Items/Armors/LightningProofArmor.cpp
        src/Items/Armors/LightningProofArmor.h
        src/Items/HeadEquipments/FireProofHeadEquipment.cpp
        src/Items/HeadEquipments/FireProofHeadEquipment.h
        src/Items/HeadEquipments/ColdProofHeadEquipment.cpp
        src/Items/HeadEquipments/ColdProofHeadEquipment.h
        src/Items/HeadEquipments/LightningProofHeadEquipment.cpp
        src/Items/HeadEquipments/LightningProofHeadEquipment.h
        src/Items/LegEquipments/FireProofLegEquipment.cpp
        src/Items/LegEquipments/FireProofLegEquipment.h
        src/Items/LegEquipments/ColdProofLegEquipment.cpp
        src/Items/LegEquipments/ColdProofLegEquipment.h
        src/Items/LegEquipments/LightningProofLegEquipment.cpp
        src/Items/LegEquipments/LightningProofLegEquipment.h
        src/Items/ArmorSuits/ArmorSuit.cpp
        src/Items/ArmorSuits/ArmorSuit.h
        src/Items/ArmorSuits/FireProofArmorSuit.cpp
        src/Items/ArmorSuits/FireProofArmorSuit.h
        src/Items/ArmorSuits/ColdProofArmorSuit.cpp
        src/Items/ArmorSuits/ColdProofArmorSuit.h
        src/Items/ArmorSuits/LightningProofArmorSuit.cpp
        src/Items/ArmorSuits/LightningProofArmorSuit.h
        src/Items/ArmorSuits/OrdinarySuit.cpp
        src/Items/ArmorSuits/OrdinarySuit.h
        src/Items/Arrows/Arrow.cpp
        src/Items/Arrows/Arrow.h
        src/Items/Arrows/OrdinaryArrow.cpp
        src/Items/Arrows/OrdinaryArrow.h
        src/Items/Arrows/FireArrow.cpp
        src/Items/Arrows/FireArrow.h
        src/Items/Arrows/IceArrow.cpp
        src/Items/Arrows/IceArrow.h
        src/Items/Arrows/LightningArrow.cpp
        src/Items/Arrows/LightningArrow.h
        src/Scenes/InformationArea.cpp
        src/Scenes/InformationArea.h
        src/Scenes/InformationComponents/ArrowInformationBox.cpp
        src/Scenes/InformationComponents/ArrowInformationBox.h
        src/Scenes/InformationComponents/WeaponInformationBox.cpp
        src/Scenes/InformationComponents/WeaponInformationBox.h
        src/Scenes/InformationComponents/ArmorSuitInformationBox.cpp
        src/Scenes/InformationComponents/ArmorSuitInformationBox.h
        src/Items/Materials/Material.cpp
        src/Items/Materials/Material.h
        src/Items/Materials/WoodMaterial.cpp
        src/Items/Materials/WoodMaterial.h
        src/Items/Materials/MetalMaterial.cpp
        src/Items/Materials/MetalMaterial.h
        src/DamageType/damageType.cpp
        src/DamageType/damageType.h
        src/DamageType/OrdinaryDamage.cpp
        src/DamageType/OrdinaryDamage.h
        src/DamageType/FireDamage.cpp
        src/DamageType/FireDamage.h
        src/DamageType/IceDamage.cpp
        src/DamageType/IceDamage.h
        src/DamageType/LightningDamage.cpp
        src/DamageType/LightningDamage.h
        src/Items/Effects/Effect.cpp
        src/Items/Effects/Effect.h
        src/Items/Effects/FireEffect.cpp
        src/Items/Effects/FireEffect.h
        src/Items/Effects/IceEffect.cpp
        src/Items/Effects/IceEffect.h
        src/Items/Effects/LightningEffect.cpp
        src/Items/Effects/LightningEffect.h
        src/Scenes/InformationComponents/DebuffInformationBox.cpp
        src/Scenes/InformationComponents/DebuffInformationBox.h
        src/Scenes/StartMenuScene.cpp
        src/Scenes/StartMenuScene.h
        src/Scenes/GameOverScene.cpp
        src/Scenes/GameOverScene.h
)
target_link_libraries(qt_programming_2024
        Qt::Core
        Qt::Gui
        Qt::Widgets
)

